WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172620
Media documents inside iframes should not get controls in the TouchBar unless the video is playing
https://bugs.webkit.org/show_bug.cgi?id=172620
Summary
Media documents inside iframes should not get controls in the TouchBar unless...
Beth Dakin
Reported
2017-05-25 16:19:42 PDT
Media documents inside iframes should not get controls in the TouchBar unless the video is playing
rdar://problem/32165477
Attachments
Patch
(8.08 KB, patch)
2017-05-25 16:24 PDT
,
Beth Dakin
no flags
Details
Formatted Diff
Diff
Patch
(9.49 KB, patch)
2017-05-25 20:16 PDT
,
Beth Dakin
jonlee
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2017-05-25 16:24:05 PDT
Created
attachment 311311
[details]
Patch
Beth Dakin
Comment 2
2017-05-25 20:16:07 PDT
Created
attachment 311329
[details]
Patch
Beth Dakin
Comment 3
2017-05-26 10:19:37 PDT
Thanks Jon!
https://trac.webkit.org/changeset/217496/webkit
Radar WebKit Bug Importer
Comment 4
2017-05-30 20:21:13 PDT
<
rdar://problem/32479708
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug