Media documents inside iframes should not get controls in the TouchBar unless the video is playing https://bugs.webkit.org/show_bug.cgi?id=172620 -and corresponding- rdar://problem/32165477

Reviewed by Jon Lee.

Source/WebCore:

Media documents get to return early with true, but that should only apply to
mainframe media documents.
* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::canShowControlsManager):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/VideoControlsManager.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit2Cocoa/offscreen-iframe-of-media-document.html: Added.



Canonical link: https://commits.webkit.org/189551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217496 268f45cc-cd09-0410-ab3c-d52691b4dbfc